// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterTile > renders CriteriaFilterTile for NumericFilter 1`] = `
<div>
  <div
    class="css-fsrb1n"
    data-testid="csdk-filter-tile-container"
  >
    <div
      class="csdk-accessible css-163e5sv"
      style="min-width: 214px; background-color: rgb(255, 255, 255); font-family: "Open Sans","Roboto","Helvetica","Arial",sans-serif;"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1gwyhv6-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-label="arrow-down"
            class="csdk-transition csdk-cursor-pointer -csdk-rotate-90"
            data-testid="expand-collapse-button"
            fill="#5B6372"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.589 10L7 10.777 11.99 15 17 10.777 16.413 10l-4.422 3.727z"
              fill="#5B6372"
              fill-rule="nonzero"
            />
          </svg>
        </button>
        <div
          style="flex-grow: 1;"
        >
          <span
            class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-leading-[16px]"
            style="color: rgb(91, 99, 114); display: inline-block;"
          >
            Test Revenue
          </span>
        </div>
        <button
          aria-label="Filter tile menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1ax21c5-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11 7C11 6.44772 11.4477 6 12 6C12.5523 6 13 6.44772 13 7C13 7.55228 12.5523 8 12 8C11.4477 8 11 7.55228 11 7ZM11 12C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12C13 12.5523 12.5523 13 12 13C11.4477 13 11 12.5523 11 12ZM12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16Z"
              fill="#5B6372"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="css-1uvk1au"
        >
          All items greater than 100
        </div>
      </main>
      <footer
        class="css-1wpi5bx"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeSmall css-99c79-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
          >
            <input
              aria-label="Enable/disable filter"
              checked=""
              class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
              name="tile-switch"
              role="switch"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
          />
        </span>
      </footer>
    </div>
  </div>
</div>
`;

exports[`FilterTile > renders CriteriaFilterTile for RankingFilter 1`] = `
<div>
  <div
    class="css-fsrb1n"
    data-testid="csdk-filter-tile-container"
  >
    <div
      class="csdk-accessible css-163e5sv"
      style="min-width: 214px; background-color: rgb(255, 255, 255); font-family: "Open Sans","Roboto","Helvetica","Arial",sans-serif;"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1gwyhv6-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-label="arrow-down"
            class="csdk-transition csdk-cursor-pointer -csdk-rotate-90"
            data-testid="expand-collapse-button"
            fill="#5B6372"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.589 10L7 10.777 11.99 15 17 10.777 16.413 10l-4.422 3.727z"
              fill="#5B6372"
              fill-rule="nonzero"
            />
          </svg>
        </button>
        <div
          style="flex-grow: 1;"
        >
          <span
            class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-leading-[16px]"
            style="color: rgb(91, 99, 114); display: inline-block;"
          >
            Test Revenue
          </span>
        </div>
        <button
          aria-label="Filter tile menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1ax21c5-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11 7C11 6.44772 11.4477 6 12 6C12.5523 6 13 6.44772 13 7C13 7.55228 12.5523 8 12 8C11.4477 8 11 7.55228 11 7ZM11 12C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12C13 12.5523 12.5523 13 12 13C11.4477 13 11 12.5523 11 12ZM12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16Z"
              fill="#5B6372"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="css-1uvk1au"
        >
          Top 10 By Average Test Revenue
        </div>
      </main>
      <footer
        class="css-1wpi5bx"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeSmall css-99c79-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
          >
            <input
              aria-label="Enable/disable filter"
              checked=""
              class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
              name="tile-switch"
              role="switch"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
          />
        </span>
      </footer>
    </div>
  </div>
</div>
`;

exports[`FilterTile > renders CriteriaFilterTile for TextFilter 1`] = `
<div>
  <div
    class="css-fsrb1n"
    data-testid="csdk-filter-tile-container"
  >
    <div
      class="csdk-accessible css-163e5sv"
      style="min-width: 214px; background-color: rgb(255, 255, 255); font-family: "Open Sans","Roboto","Helvetica","Arial",sans-serif;"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1gwyhv6-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-label="arrow-down"
            class="csdk-transition csdk-cursor-pointer -csdk-rotate-90"
            data-testid="expand-collapse-button"
            fill="#5B6372"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.589 10L7 10.777 11.99 15 17 10.777 16.413 10l-4.422 3.727z"
              fill="#5B6372"
              fill-rule="nonzero"
            />
          </svg>
        </button>
        <div
          style="flex-grow: 1;"
        >
          <span
            class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-leading-[16px]"
            style="color: rgb(91, 99, 114); display: inline-block;"
          >
            Test Revenue
          </span>
        </div>
        <button
          aria-label="Filter tile menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1ax21c5-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11 7C11 6.44772 11.4477 6 12 6C12.5523 6 13 6.44772 13 7C13 7.55228 12.5523 8 12 8C11.4477 8 11 7.55228 11 7ZM11 12C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12C13 12.5523 12.5523 13 12 13C11.4477 13 11 12.5523 11 12ZM12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16Z"
              fill="#5B6372"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="css-1uvk1au"
        >
          All items doesn't start with 100
        </div>
      </main>
      <footer
        class="css-1wpi5bx"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeSmall css-99c79-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
          >
            <input
              aria-label="Enable/disable filter"
              checked=""
              class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
              name="tile-switch"
              role="switch"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
          />
        </span>
      </footer>
    </div>
  </div>
</div>
`;

exports[`FilterTile > renders CustomFilterTile for advnced filter type 1`] = `
<div>
  <div
    class="css-fsrb1n"
    data-testid="csdk-filter-tile-container"
  >
    <div
      class="csdk-accessible css-163e5sv"
      style="min-width: 214px; background-color: rgb(255, 255, 255); font-family: "Open Sans","Roboto","Helvetica","Arial",sans-serif;"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <div
          style="flex-grow: 1;"
        >
          <span
            class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-leading-[16px]"
            style="color: rgb(91, 99, 114); display: inline-block;"
          >
            Test Revenue
          </span>
        </div>
        <button
          aria-label="Filter tile menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1ax21c5-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11 7C11 6.44772 11.4477 6 12 6C12.5523 6 13 6.44772 13 7C13 7.55228 12.5523 8 12 8C11.4477 8 11 7.55228 11 7ZM11 12C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12C13 12.5523 12.5523 13 12 13C11.4477 13 11 12.5523 11 12ZM12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16Z"
              fill="#5B6372"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="css-1uvk1au"
        >
          filtered with custom filter
        </div>
      </main>
      <footer
        class="css-1wpi5bx"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeSmall css-99c79-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
          >
            <input
              aria-label="Enable/disable filter"
              checked=""
              class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
              name="tile-switch"
              role="switch"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
          />
        </span>
      </footer>
    </div>
  </div>
</div>
`;

exports[`FilterTile > renders Filter Tile for unsupported filter type 1`] = `
<div>
  <div
    class="css-fsrb1n"
    data-testid="csdk-filter-tile-container"
  >
    <div
      class="csdk-accessible css-163e5sv"
      style="min-width: 214px; background-color: rgb(255, 255, 255); font-family: "Open Sans","Roboto","Helvetica","Arial",sans-serif;"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <div
          style="flex-grow: 1;"
        >
          <span
            class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-leading-[16px]"
            style="color: rgb(91, 99, 114); display: inline-block;"
          >
            Unsupported Filter
          </span>
        </div>
        <button
          aria-label="Filter tile menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1ax21c5-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11 7C11 6.44772 11.4477 6 12 6C12.5523 6 13 6.44772 13 7C13 7.55228 12.5523 8 12 8C11.4477 8 11 7.55228 11 7ZM11 12C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12C13 12.5523 12.5523 13 12 13C11.4477 13 11 12.5523 11 12ZM12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16Z"
              fill="#5B6372"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="css-1uvk1au"
        >
          Unsupported Filter (applied to the data query)
        </div>
      </main>
      <footer
        class="css-1wpi5bx"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeSmall css-99c79-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
          >
            <input
              aria-label="Enable/disable filter"
              checked=""
              class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
              name="tile-switch"
              role="switch"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
          />
        </span>
      </footer>
    </div>
  </div>
</div>
`;

exports[`FilterTile > renders RelativeDateFilterTile for RelativeDateFilter 1`] = `
<div>
  <div
    class="css-fsrb1n"
    data-testid="csdk-filter-tile-container"
  >
    <div
      class="csdk-accessible css-163e5sv"
      style="min-width: 214px; background-color: rgb(255, 255, 255); font-family: "Open Sans","Roboto","Helvetica","Arial",sans-serif;"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1gwyhv6-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-label="arrow-down"
            class="csdk-transition csdk-cursor-pointer -csdk-rotate-90"
            data-testid="expand-collapse-button"
            fill="#5B6372"
            height="16"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.589 10L7 10.777 11.99 15 17 10.777 16.413 10l-4.422 3.727z"
              fill="#5B6372"
              fill-rule="nonzero"
            />
          </svg>
        </button>
        <div
          style="flex-grow: 1;"
        >
          <span
            class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-leading-[16px]"
            style="color: rgb(91, 99, 114); display: inline-block;"
          >
            Years
          </span>
        </div>
        <button
          aria-label="Filter tile menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1ax21c5-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11 7C11 6.44772 11.4477 6 12 6C12.5523 6 13 6.44772 13 7C13 7.55228 12.5523 8 12 8C11.4477 8 11 7.55228 11 7ZM11 12C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12C13 12.5523 12.5523 13 12 13C11.4477 13 11 12.5523 11 12ZM12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16Z"
              fill="#5B6372"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="css-1uvk1au"
        >
          Next 1 Years From Today
        </div>
      </main>
      <footer
        class="css-1wpi5bx"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeSmall css-99c79-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
          >
            <input
              aria-label="Enable/disable filter"
              checked=""
              class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
              name="tile-switch"
              role="switch"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
          />
        </span>
      </footer>
    </div>
  </div>
</div>
`;

exports[`FilterTile > renders locked CriteriaFilterTile 1`] = `
<div>
  <div
    class="css-fsrb1n"
    data-testid="csdk-filter-tile-container"
  >
    <div
      class="csdk-accessible css-163e5sv"
      style="min-width: 214px; background-color: rgb(255, 255, 255); font-family: "Open Sans","Roboto","Helvetica","Arial",sans-serif;"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <svg
          fill="#b4b4b4"
          height="22"
          viewBox="0 0 22 22"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            transform="translate(5.000000,5.000000) scale(.70, 0.6)"
          >
            <path
              d="m3,9v11h14V9M4,9V6c0-3.3 2.7-6 6-6c3.3,0 6,2.7 6,6v3H14V6c0-2.2-1.8-4-4-4-2.2,0-4,1.8-4,4v3"
            />
            <rect
              fill="#dcdcdc"
              height="9"
              width="12"
              x="4"
              y="10"
            />
          </g>
        </svg>
        <div
          style="flex-grow: 1;"
        >
          <span
            class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-leading-[16px]"
            style="color: rgb(91, 99, 114); display: inline-block;"
          >
            Test Revenue
          </span>
        </div>
        <button
          aria-label="Filter tile menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1ax21c5-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11 7C11 6.44772 11.4477 6 12 6C12.5523 6 13 6.44772 13 7C13 7.55228 12.5523 8 12 8C11.4477 8 11 7.55228 11 7ZM11 12C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12C13 12.5523 12.5523 13 12 13C11.4477 13 11 12.5523 11 12ZM12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16Z"
              fill="#5B6372"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="css-1uvk1au"
        >
          All items greater than 100
        </div>
        <div
          data-testid="filter-tile-locked-overlay"
          style="position: absolute; top: 4px; left: 4px; right: 4px; bottom: 4px; background-color: rgb(255, 255, 255); opacity: 0.5;"
        />
      </main>
      <footer
        class="css-1wpi5bx"
      />
    </div>
  </div>
</div>
`;

exports[`FilterTile > renders locked RelativeDateFilter component 1`] = `
<div>
  <div
    class="css-fsrb1n"
    data-testid="csdk-filter-tile-container"
  >
    <div
      class="csdk-accessible css-163e5sv"
      style="min-width: 214px; background-color: rgb(255, 255, 255); font-family: "Open Sans","Roboto","Helvetica","Arial",sans-serif;"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <svg
          fill="#b4b4b4"
          height="22"
          viewBox="0 0 22 22"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            transform="translate(5.000000,5.000000) scale(.70, 0.6)"
          >
            <path
              d="m3,9v11h14V9M4,9V6c0-3.3 2.7-6 6-6c3.3,0 6,2.7 6,6v3H14V6c0-2.2-1.8-4-4-4-2.2,0-4,1.8-4,4v3"
            />
            <rect
              fill="#dcdcdc"
              height="9"
              width="12"
              x="4"
              y="10"
            />
          </g>
        </svg>
        <div
          style="flex-grow: 1;"
        >
          <span
            class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-leading-[16px]"
            style="color: rgb(91, 99, 114); display: inline-block;"
          >
            Years
          </span>
        </div>
        <button
          aria-label="Filter tile menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1ax21c5-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M11 7C11 6.44772 11.4477 6 12 6C12.5523 6 13 6.44772 13 7C13 7.55228 12.5523 8 12 8C11.4477 8 11 7.55228 11 7ZM11 12C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12C13 12.5523 12.5523 13 12 13C11.4477 13 11 12.5523 11 12ZM12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16Z"
              fill="#5B6372"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="css-1uvk1au"
        >
          Next 1 Years From Today
        </div>
        <div
          data-testid="filter-tile-locked-overlay"
          style="position: absolute; top: 4px; left: 4px; right: 4px; bottom: 4px; background-color: rgb(255, 255, 255); opacity: 0.5;"
        />
      </main>
      <footer
        class="css-1wpi5bx"
      />
    </div>
  </div>
</div>
`;
